# rampart

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .hadolint.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
adapters/: README.md
adapters/backend/python/: README.md  pyproject.toml
adapters/backend/python/rampart/: __init__.py  fastapi.py  flask.py  middleware.py
adapters/backend/python/tests/: test_middleware.py
adapters/backend/rust/: Cargo.toml  README.md
adapters/backend/rust/src/: claims.rs  error.rs  lib.rs  middleware.rs
cookbook/: README.md
cookbook/rust-backend/: Cargo.toml  README.md
cookbook/rust-backend/src/: main.rs
docs-site/: .gitignore  docusaurus.config.ts  package-lock.json  sidebars.ts
e2e/: playwright.config.ts
examples/: test-integration.sh
migrations/: 000001_create_organizations.up.sql  000002_create_users.up.sql  000003_seed_admin_user.down.sql  000003_seed_admin_user.up.sql  000004_create_sessions.up.sql  000005_create_organization_settings.down.sql  000005_create_organization_settings.up.sql  000006_create_oauth_clients.up.sql  000007_create_authorization_codes.up.sql  000008_seed_sample_client.down.sql  000008_seed_sample_client.up.sql  000009_seed_admin_client.down.sql  000009_seed_admin_client.up.sql  000010_alter_oauth_clients.down.sql  000010_alter_oauth_clients.up.sql  000011_create_roles.up.sql  000012_create_user_roles.up.sql  000013_seed_default_roles.down.sql  000013_seed_default_roles.up.sql  000014_create_audit_events.up.sql  000015_create_groups.down.sql  000015_create_groups.up.sql  000016_add_auth_settings.down.sql  000016_add_auth_settings.up.sql  000017_add_login_theme.down.sql  000017_add_login_theme.up.sql  000018_add_social_accounts.up.sql  000020_add_mfa_totp.down.sql  000020_add_mfa_totp.up.sql  000020_add_webhooks.up.sql  000020_social_provider_configs.down.sql  000020_social_provider_configs.up.sql  000022_add_nonce_to_auth_codes.down.sql  000022_add_nonce_to_auth_codes.up.sql  000023_add_lockout_settings.down.sql  000023_add_lockout_settings.up.sql  000024_add_password_reset_tokens.up.sql  000025_add_mfa_devices.down.sql  000025_add_mfa_devices.up.sql  000026_add_email_verification_tokens.up.sql  (+19 more)
plans/: adapters-roadmap.md  (+4 more)
(+792 files in other folders)
