[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-backend"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
