[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "rampart-python"
version = "0.1.0"
description = "Python middleware adapter for Rampart IAM — JWT verification for FastAPI and Flask"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
flask = ["flask>=2.3.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rampart"]
